# personal_search

./: .gitignore  .test_firefox_sync_cache.toml  CHANGELOG.md  CUSTOM.md  Cargo.toml  LICENSE  README  README.md  _config.yml  build.rs  index.md
.github/ISSUE_TEMPLATE/: indexer.md  server.md  ui-.md  ui.md  yew.md
.github/workflows/: rust.yml  rust_build_only.yml
.test_private_search/: .managed.json  meta.json
.test_private_search_hashes/: .managed.json  meta.json
search/: index.html  package-lock.json  package.json
search/crate/: Cargo.toml
search/crate/src/: app.rs  lib.rs  util.rs  view_pages.rs
search/crate/src/app/: rawhtml.rs  search.rs  settings.rs  view.rs
search/crate/src/pages/: home.rs
search/js/: index.js  search.xml
src/: indexer.rs  lib.rs  main.rs
src/firefox_sync/: main.rs
src/indexer/: getter.rs  hash_index.rs  select_patches.rs  system_settings.rs
test/: History
tmp-search/: package-lock.json
tmp-search/crate/: Cargo.toml
tmp-search/crate/src/: app.rs
tmp-search/crate/src/pages/: about.rs
