[package]
name = "personal_search"
version = "0.1.0"
authors = ["becker <github@deathbyescalator.com>"]
edition = "2018"

[features]
ml = ["rust-bert"]
sync = [ "rusqlite", "tempfile" ]
server = ["tokio", "actix-web","actix-cors", "actix-files", "actix-service", "futures", "env_logger", "json"]

[dependencies]
actix-cors =  { version = "*", optional = true }
actix-files =  { version = "*", optional = true }
actix-service = { version =  "1", optional = true }
actix-web =  { version = "3", optional = true }
env_logger = { version =  "0.7", optional = true }
futures =  { version = "0.3.1", optional = true }
json =  { version = "0.12", optional = true }
rusqlite = { version = "*", optional = true, features= ["bundled","chrono","unlock_notify"] }
rust-bert = { version = "*", optional = true }
tokio = { version="*", optional = true}
tempfile = { version="*", optional = true}

brotli = "*"
chrono = "*"
dirs = "*"
glob = "*"
lazy_static = "*"
md5 =  { version = "*"}
probabilistic-collections = { version = "*", features = ["serde"] }
select = "*"
serde = { version = "1", features = ["derive"]}
serde_json =  { version = "1" }
structopt = "*"
tantivy = "0.13.2"
toml = "*"
triple_accel =  { version = "*" }
ureq = "*"
url = "*"

[[bin]]
name = "chrome_sync"
path = "src/bin/chrome_sync/main.rs"
features = ["sync", "ml"]
default= ["sync"]

[[bin]]
name = "firefox_sync"
path = "src/bin/firefox_sync/main.rs"
features = ["sync", "ml"]
default =["sync"]

[[bin]]
name = "server"
path = "src/bin/server/main.rs"
features = ["server"]
