[package]
name = "personal_search"
version = "0.1.0"
authors = ["becker <github@deathbyescalator.com>"]
edition = "2018"

[features]
brave = []
sync = [ "rusqlite", "tempfile", "csv"]
server = [ "tokio", "actix-web","actix-cors", "actix-files", "actix-service", "futures", "env_logger", "json"]
static = ["actix-web-static-files"]
toolkit = ["termimad", "html2md"]

[dependencies]
rand = '*'
csv =  { version = "1.1", optional = true }
actix-cors =  { version = "0.4.1", optional = true }
actix-files =  { version = "0.4.0", optional = true }
actix-service = { version =  "1", optional = true }
actix-web =  { version = "3", optional = true }
actix-web-static-files = {version="*", optional=true}
env_logger = { version =  "0.7", optional = true }
futures =  { version = "0.3.1", optional = true }
html2md = {version="*", optional=true}
json =  { version = "0.12", optional = true }
rusqlite = { version = "*", optional = true, features= ["bundled","chrono","unlock_notify"] }
tempfile = { version="*", optional = true}
termimad = {version="*", optional=true}
tokio = { version="*", optional = true, features=["rt"] }
rayon = { version="*", optional=true}

brotli = "*"
chrono = "*"
dirs = "*"
glob = "*"
lazy_static = "*"
md5 =  { version = "*"}
probabilistic-collections = { version = "*", features = ["serde"] }
select = "*"
serde = { version = "1", features = ["derive"]}
serde_json =  { version = "1" }
structopt = "*"
tantivy = "0.15"
toml = "*"
triple_accel =  { version = "*" }
ureq = "2.1.1"
url = "*"

[[bin]]
name = "csv_processor"
path = "src/bin/csv_processor/main.rs"
features = ["sync"]
default= ["sync"]

[[bin]]
name = "chrome_sync"
path = "src/bin/chrome_sync/main.rs"
features = ["sync"]
default= ["sync"]

[[bin]]
name = "firefox_sync"
path = "src/bin/firefox_sync/main.rs"
features = ["sync"]
default =["sync"]

[[bin]]
name = "server"
path = "src/bin/server/main.rs"
features = ["server", "static"]

[server.package]
build = "build.rs"


[build-dependencies]
actix-web-static-files = {version="*", optional=true}

